# Arcanoid_CPP

./: .gitignore  CMakeLists.txt  COPYING.md  LICENSE  Report_Yaroslav_K.docx  build_linux.sh  fps_control.h++  fps_control.hpp  game_consts_and_globals.hpp  level_files_handler.h++  level_files_handler.hpp  levels.ods  main.cpp  physics.hpp  random.h++  random.hpp  readme.md  Индивидуальный_Проект_Кузнецов_ИКБО-09-22.7z  Индивидуальный_Проект_Кузнецов_ИКБО-09-22.tar.xz
GUI/: AboutForm.hpp  Ball.hpp  Bonuses.hpp  GUI.h++  GameWindow.h++  GameWindow.hpp  LevelSelectMenu.hpp  MainMenu.hpp  TargetBlock.hpp  UIElements.h++  UIElements.hpp
Report_doc/: Phisics_1.graphml  build_structure.graphml  fps_control.graphml  main.graphml  main_loop.graphml  new_game_iteration.graphml
levels/: debug_b1.level  level_01.level  level_03.level  level_04.level  level_07.level  level_b01.level
ui_design_files/: about_form.ui  game_window.ui  main.ui
Индивидуальный_Проект_Кузнецов_ИКБО-09-22/: .gitignore  CMakeLists.txt  README.txt  Report_Yaroslav_K.docx  game_consts_and_globals.hpp  level_files_handler.hpp  main.cpp  random.hpp
Индивидуальный_Проект_Кузнецов_ИКБО-09-22/BUILDS/Win10/icons/: Ball_speed_up_ico.kra  Ball_triple_ico.kra  Platform_speed_slow_ico.kra
Индивидуальный_Проект_Кузнецов_ИКБО-09-22/GUI/: AboutForm.hpp  Ball.hpp  Bonuses.hpp  GUI.hpp  GameWindow.hpp  MainMenu.hpp
Индивидуальный_Проект_Кузнецов_ИКБО-09-22/icons/: Ball_triple_ico_48x48.kra  Platform_size_up_ico.kra  bonus_score_ico.kra
Индивидуальный_Проект_Кузнецов_ИКБО-09-22/levels/: level_b04.level
(+13 files in other folders)
